@@ -9,44 +9,61 @@ import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
+import net.minecraft.client.Minecraft;
+import net.minecraft.core.Holder;
+import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.ItemEnchantments;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 public class EnchantingEmiRecipe implements EmiRecipe {
 
-    private static final ResourceLocation BACKGROUND = new ResourceLocation(Constants.MOD_ID, "textures/gui/emi_background.png");
+    private static final ResourceLocation BACKGROUND = ResourceLocation.fromNamespaceAndPath(Constants.MOD_ID, "textures/gui/emi_background.png");
     private final ResourceLocation id;
     private final List<EmiIngredient> inputs;
     private final EmiIngredient baseIngredient;
     private final List<EmiStack> outputs;
 
-    public EnchantingEmiRecipe(EnchantingRecipe recipe) {
-        this.id = recipe.getId();
+    public EnchantingEmiRecipe(RecipeHolder<EnchantingRecipe> recipeHolder) {
+        this.id = recipeHolder.id();
+        EnchantingRecipe recipe = recipeHolder.value();
         this.inputs = recipe.getIngredients().stream().map(EmiIngredient::of).collect(Collectors.toList());
 
         List<EmiStack> validBases = new ArrayList<>();
         List<EmiStack> validOutputs = new ArrayList<>();
+
+        Registry<Enchantment> enchantRegistry = Minecraft.getInstance().level.registryAccess().registryOrThrow(Registries.ENCHANTMENT);
+
+        List<List<Holder<Enchantment>>> resolvedPools = new ArrayList<>();
+        for (List<ResourceKey<Enchantment>> poolKeys : recipe.getEnchantmentPools()) {
+            List<Holder<Enchantment>> pool = new ArrayList<>();
+            for (ResourceKey<Enchantment> key : poolKeys) {
+                enchantRegistry.getHolder(key).ifPresent(pool::add);
+            }
+            if (!pool.isEmpty()) resolvedPools.add(pool);
+        }
 
         // test all registered items
         for (Item item : BuiltInRegistries.ITEM) {
             ItemStack testStack = new ItemStack(item);
             boolean isValid = false;
 
-            for (List<Enchantment> pool : recipe.getEnchantmentPools()) {
+            for (List<Holder<Enchantment>> pool : resolvedPools) {
                 boolean poolValid = true;
-                for (Enchantment e : pool) {
-                    if (!e.canEnchant(testStack) && !testStack.is(Items.BOOK)) {
+                for (Holder<Enchantment> e : pool) {
+                    if (!e.value().canEnchant(testStack) && !testStack.is(Items.BOOK)) {
                         poolValid = false;
                         break;
                     }
@@ -60,14 +77,18 @@ public class EnchantingEmiRecipe implements EmiRecipe {
             if (isValid) {
                 validBases.add(EmiStack.of(testStack));
 
-                for (List<Enchantment> pool : recipe.getEnchantmentPools()) {
+                for (List<Holder<Enchantment>> pool : resolvedPools) {
                     ItemStack outStack = testStack.copy();
                     if (outStack.getItem() == Items.BOOK) {
                         outStack = new ItemStack(Items.ENCHANTED_BOOK);
                     }
-                    Map<Enchantment, Integer> appliedEnchantments = new HashMap<>();
-                    for (Enchantment e : pool) appliedEnchantments.put(e, 1);
-                    EnchantmentHelper.setEnchantments(appliedEnchantments, outStack);
+
+                    ItemEnchantments.Mutable enchantments = new ItemEnchantments.Mutable(ItemEnchantments.EMPTY);
+                    for (Holder<Enchantment> e : pool) {
+                        enchantments.set(e, 1);
+                    }
+
+                    EnchantmentHelper.setEnchantments(outStack, enchantments.toImmutable());
                     validOutputs.add(EmiStack.of(outStack));
                 }
             }
@@ -77,11 +98,12 @@ public class EnchantingEmiRecipe implements EmiRecipe {
         if (validBases.isEmpty()) {
             validBases.add(EmiStack.of(Items.BOOK));
             ItemStack out = new ItemStack(Items.ENCHANTED_BOOK);
-            Map<Enchantment, Integer> map = new HashMap<>();
-            if (!recipe.getEnchantmentPools().isEmpty()) {
-                for (Enchantment e : recipe.getEnchantmentPools().get(0)) map.put(e, 1);
+            ItemEnchantments.Mutable enchantments = new ItemEnchantments.Mutable(ItemEnchantments.EMPTY);
+
+            if (!resolvedPools.isEmpty()) {
+                for (Holder<Enchantment> e : resolvedPools.getFirst()) enchantments.set(e, 1);
             }
-            EnchantmentHelper.setEnchantments(map, out);
+            EnchantmentHelper.setEnchantments(out, enchantments.toImmutable());
             validOutputs.add(EmiStack.of(out));
         }
 
@@ -141,7 +163,7 @@ public class EnchantingEmiRecipe implements EmiRecipe {
         RotationState state = new RotationState(cx, cy, radius, circleItems.size());
 
         widgets.add(new RotatingLettersWidget(
-                new ResourceLocation(Constants.MOD_ID, "textures/gui/enchanted_letters.png"),
+                ResourceLocation.fromNamespaceAndPath(Constants.MOD_ID, "textures/gui/enchanted_letters.png"),
                 cx, cy, radius + 6
         ));
 
